# Voice-module-Learning

./: README.md
shushan_voice_player/: README.md  package.xml  setup.cfg  setup.py
shushan_voice_player/launch/: voice_player.launch.py
shushan_voice_player/resource/: shushan_voice_player
shushan_voice_player/shushan_voice_player/: __init__.py  voice_player_node.py
